Appending authoized client to current principal works ...
... but i broke the OAuth2 login :/

--- a/datamanager-app/src/main/resources/application.properties
+++ b/datamanager-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # See https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html for reference
 ################### Logging ###################################################
 logging.level.root=info
-logging.level.org.springframework.security=info
+logging.level.org.springframework.security=DEBUG
 logging.level.life.qbic=${DM_LOG_LEVEL:info}
 logging.level.life.qbic.datamanager=${DM_LOG_LEVEL:info}
 logging.level.life.qbic.projectmanagement.application.authorization.acl=debug
@@ -139,16 +139,24 @@ qbic.external-service.person-search.orcid.grant-type=client_credentials
 qbic.external-service.person-search.orcid.issuer=${ORCID_SEARCH_ISSUER_URL:https://orcid.org}
 
 #### Remote RDM instance OAUTH configuration
-spring.security.oauth2.client.registration.rdm.client-name=invenio
-spring.security.oauth2.client.registration.rdm.client-id=${RMD_CLIENT_ID:id}
-spring.security.oauth2.client.registration.rdm.client-secret=${RDM_CLIENT_SECRET:secret}
-spring.security.oauth2.client.registration.rdm.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.rdm.redirect-uri=${RDM_REDIRECT_URI:{baseUrl}/login/oauth2/code/invenio}
-spring.security.oauth2.client.registration.rdm.scope=openid
-spring.security.oauth2.client.provider.rdm.authorization-uri=${ORCID_AUTHORIZATION_URL:https://inveniordm.web.cern.ch/oauth/authorize}
-spring.security.oauth2.client.provider.rdm.token-uri=${ORCID_TOKEN_URI:https://inveniordm.web.cern.ch/oauth/authorize/oauth/token}
-spring.security.oauth2.client.provider.rdm.user-info-uri=${ORCID_USERINFO_URI:https://inveniordm.web.cern.ch/oauth/authorize/oauth/userinfo}
-spring.security.oauth2.client.provider.rdm.jwk-set-uri=${ORCID_JWK_SET_URI:https://inveniordm.web.cern.ch/oauth/authorize/oauth/jwks}
+spring.security.oauth2.client.registration.invenio.client-name=invenio
+spring.security.oauth2.client.registration.invenio.client-id=${RDM_CLIENT_ID:id}
+spring.security.oauth2.client.registration.invenio.client-secret=${RDM_CLIENT_SECRET:secret}
+spring.security.oauth2.client.registration.invenio.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.invenio.scope=deposit:write
+spring.security.oauth2.client.registration.invenio.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.invenio.redirect-uri=${RDM_REDIRECT_URI:{baseUrl}/oauth2/callback/invenio}
+spring.security.oauth2.client.provider.invenio.authorization-uri=${RDM_AUTHORIZATION_URL:https://zenodo.org/oauth/authorize}
+spring.security.oauth2.client.provider.invenio.token-uri=${RDM_TOKEN_URI:https://zenodo.org/oauth/token}
+spring.security.oauth2.client.provider.invenio.user-info-uri=${RDM_USERINFO_URI:https://zenodo.org/api/me}
+spring.security.oauth2.client.provider.invenio.jwk-set-uri=${RDM_JWK_SET_URI:https://zenodo.org/oauth/jwks}
+spring.security.oauth2.client.provider.invenio.user-name-attribute=id
+
+logging.level.org.springframework.security.oauth2=DEBUG
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+logging.level.org.springframework.security.web=DEBUG
+logging.level.org.springframework.security.oauth2.client=DEBUG
 ###############################################################################
 ################### ActiveMQ Artemis ##########################################
 # ActiveMQ Artemis is used as a global message broker handling
