--- a/datamanager-app/pom.xml
+++ b/datamanager-app/pom.xml
@@ -165,7 +165,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-oauth2-client</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
