Have working example

--- a/datamanager-app/src/main/resources/application.properties
+++ b/datamanager-app/src/main/resources/application.properties
@@ -138,19 +138,33 @@ qbic.external-service.person-search.orcid.scope=/read-public
 qbic.external-service.person-search.orcid.grant-type=client_credentials
 qbic.external-service.person-search.orcid.issuer=${ORCID_SEARCH_ISSUER_URL:https://orcid.org}
 
-#### Remote RDM instance OAUTH configuration
-spring.security.oauth2.client.registration.invenio.client-name=invenio
-spring.security.oauth2.client.registration.invenio.client-id=${RDM_CLIENT_ID:id}
-spring.security.oauth2.client.registration.invenio.client-secret=${RDM_CLIENT_SECRET:secret}
-spring.security.oauth2.client.registration.invenio.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.invenio.scope=deposit:write
-spring.security.oauth2.client.registration.invenio.client-authentication-method=client_secret_post
-spring.security.oauth2.client.registration.invenio.redirect-uri=${RDM_REDIRECT_URI:{baseUrl}/login/oauth2/code/invenio}
-spring.security.oauth2.client.provider.invenio.authorization-uri=${RDM_AUTHORIZATION_URL:https://zenodo.org/oauth/authorize}
-spring.security.oauth2.client.provider.invenio.token-uri=${RDM_TOKEN_URI:https://zenodo.org/oauth/token}
-spring.security.oauth2.client.provider.invenio.user-info-uri=${RDM_USERINFO_URI:https://zenodo.org/api/me}
-spring.security.oauth2.client.provider.invenio.jwk-set-uri=${RDM_JWK_SET_URI:https://zenodo.org/oauth/jwks}
-spring.security.oauth2.client.provider.invenio.user-name-attribute=id
+#### Remote InvenioRDM Zenodo instance OAuth2 client configuration
+spring.security.oauth2.client.registration.invenio-zenodo.client-name=Zenodo - InvenioRDM hosted at Cern
+spring.security.oauth2.client.registration.invenio-zenodo.client-id=${RDM_CLIENT_ID:id}
+spring.security.oauth2.client.registration.invenio-zenodo.client-secret=${RDM_CLIENT_SECRET:secret}
+spring.security.oauth2.client.registration.invenio-zenodo.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.invenio-zenodo.scope=deposit:write
+spring.security.oauth2.client.registration.invenio-zenodo.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.invenio-zenodo.redirect-uri=${RDM_REDIRECT_URI:{baseUrl}/login/oauth2/code/invenio-zenodo}
+spring.security.oauth2.client.provider.invenio-zenodo.authorization-uri=${RDM_AUTHORIZATION_URL:https://zenodo.org/oauth/authorize}
+spring.security.oauth2.client.provider.invenio-zenodo.token-uri=${RDM_TOKEN_URI:https://zenodo.org/oauth/token}
+spring.security.oauth2.client.provider.invenio-zenodo.user-info-uri=${RDM_USERINFO_URI:https://zenodo.org/api/me}
+spring.security.oauth2.client.provider.invenio-zenodo.jwk-set-uri=${RDM_JWK_SET_URI:https://zenodo.org/oauth/jwks}
+spring.security.oauth2.client.provider.invenio-zenodo.user-name-attribute=id
+
+#### Remote InvenioRDM FDAT instance OAuth2 client configuration
+spring.security.oauth2.client.registration.invenio-fdat.client-name=FDAT - InvenioRDM hosted at University of Tuebingen
+spring.security.oauth2.client.registration.invenio-fdat.client-id=${RDM_CLIENT_ID:id}
+spring.security.oauth2.client.registration.invenio-fdat.client-secret=${RDM_CLIENT_SECRET:secret}
+spring.security.oauth2.client.registration.invenio-fdat.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.invenio-fdat.scope=deposit:write
+spring.security.oauth2.client.registration.invenio-fdat.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.invenio-fdat.redirect-uri=${RDM_REDIRECT_URI:{baseUrl}/login/oauth2/code/invenio-fdat}
+spring.security.oauth2.client.provider.invenio-fdat.authorization-uri=${RDM_AUTHORIZATION_URL:https://zenodo.org/oauth/authorize}
+spring.security.oauth2.client.provider.invenio-fdat.token-uri=${RDM_TOKEN_URI:https://zenodo.org/oauth/token}
+spring.security.oauth2.client.provider.invenio-fdat.user-info-uri=${RDM_USERINFO_URI:https://zenodo.org/api/me}
+spring.security.oauth2.client.provider.invenio-fdat.jwk-set-uri=${RDM_JWK_SET_URI:https://zenodo.org/oauth/jwks}
+spring.security.oauth2.client.provider.invenio-fdat.user-name-attribute=id
 
 logging.level.org.springframework.security.oauth2=DEBUG
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
