--- a/datamanager-app/src/main/resources/application.properties
+++ b/datamanager-app/src/main/resources/application.properties
@@ -137,6 +137,7 @@ qbic.external-service.person-search.orcid.extended-search-uri=${qbic.external-se
 qbic.external-service.person-search.orcid.scope=/read-public
 qbic.external-service.person-search.orcid.grant-type=client_credentials
 qbic.external-service.person-search.orcid.issuer=${ORCID_SEARCH_ISSUER_URL:https://orcid.org}
+qbic.external-service.organisation-search.ror.client-id=${ROR_CLIENT_ID}
 
 ###############################################################################
 ################### ActiveMQ Artemis ##########################################
