--- a/datamanager-app/src/main/resources/application.properties
+++ b/datamanager-app/src/main/resources/application.properties
@@ -48,7 +48,7 @@ spring.jpa.database=mysql
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 # In case you want to access the H2 database (if you use one)
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 # Set explicitly to false to close a session on request finish
 # https://www.baeldung.com/spring-open-session-in-view.
 spring.jpa.open-in-view=false
