--- a/datamanager-bom/pom.xml
+++ b/datamanager-bom/pom.xml
@@ -11,14 +11,16 @@
   <description>Bill of Materials for DataManager artifacts</description>
 
   <properties>
-    <vaadin.version>24.4.13</vaadin.version>
+    <apache.poi.version>5.5.1</apache.poi.version>
+    <jackson.version>2.18.3</jackson.version>
+    <jakarta.persistence.version>3.2.0</jakarta.persistence.version>
+    <logback.version>1.5.24</logback.version>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
-    <jakarta.persistence.version>3.2.0</jakarta.persistence.version>
-    <jackson.version>2.18.3</jackson.version>
-    <sonar.projectKey>qbicsoftware_data-manager-app</sonar.projectKey>
-    <sonar.organization>qbicsoftware</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.organization>qbicsoftware</sonar.organization>
+    <sonar.projectKey>qbicsoftware_data-manager-app</sonar.projectKey>
+    <vaadin.version>24.4.13</vaadin.version>
   </properties>
 
   <distributionManagement>
@@ -130,9 +132,30 @@
         <scope>import</scope>
       </dependency>
       <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-fileupload2-core</artifactId>
+        <version>2.0.0-M4</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.20.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.activemq</groupId>
+        <artifactId>artemis-jakarta-server</artifactId>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+          </exclusion>
+        </exclusions>
+        <version>2.43.0</version> <!-- version 2.44 is signed differently-->
+      </dependency>
+      <dependency>
         <groupId>com.sun.mail</groupId>
         <artifactId>jakarta.mail</artifactId>
-        <version>2.0.1</version>
+        <version>2.0.2</version>
       </dependency>
       <dependency>
         <groupId>org.spockframework</groupId>
@@ -190,12 +213,12 @@
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>2.19.0</version>
+        <version>2.20.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
-        <version>5.4.0</version>
+        <version>${apache.poi.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
@@ -205,7 +228,13 @@
       <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi-ooxml</artifactId>
-        <version>5.4.0</version>
+        <version>${apache.poi.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>net.javacrumbs.shedlock</groupId>
@@ -227,17 +256,48 @@
       <dependency>
         <groupId>org.docx4j</groupId>
         <artifactId>docx4j-JAXB-ReferenceImpl</artifactId>
-        <version>11.5.3</version>
+        <version>11.5.9</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3/3.20.0 -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.20.0</version>
       </dependency>
       <dependency>
         <groupId>edu.kit.datamanager</groupId>
         <artifactId>ro-crate-java</artifactId>
         <version>1.1.1</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
+
+      <dependency>
+        <groupId>commons-beanutils</groupId>
+        <artifactId>commons-beanutils</artifactId>
+        <version>1.11.0</version>
+      </dependency>
+
       <dependency>
         <groupId>org.docx4j</groupId>
         <artifactId>docx4j-core</artifactId>
-        <version>11.5.0</version>
+        <version>11.5.9</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jaxb</groupId>
