--- a/pom.xml
+++ b/pom.xml
@@ -36,24 +36,29 @@
   </modules>
   <packaging>pom</packaging>
 
-  <properties>
-    <java.version>21</java.version>
-    <vaadin.version>24.4.13</vaadin.version>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
-    <jakarta.persistence.version>3.2.0</jakarta.persistence.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jackson.version>2.18.3</jackson.version>
-    <sonar.projectKey>qbicsoftware_data-manager-app</sonar.projectKey>
-    <sonar.organization>qbicsoftware</sonar.organization>
-    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-  </properties>
 
   <parent>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.5.6</version>
+    <version>3.5.9</version>
   </parent>
+
+
+  <properties>
+    <apache.poi.version>5.5.1</apache.poi.version>
+    <jackson.version>2.18.3</jackson.version>
+    <jakarta.persistence.version>3.2.0</jakarta.persistence.version>
+    <java.version>21</java.version>
+    <logback.version>1.5.24</logback.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.organization>qbicsoftware</sonar.organization>
+    <sonar.projectKey>qbicsoftware_data-manager-app</sonar.projectKey>
+    <vaadin.version>24.4.13</vaadin.version>
+  </properties>
+
 
   <repositories>
     <!-- The order of definitions matters. Explicitly defining central here to make sure it has the highest priority. -->
@@ -243,7 +248,7 @@
       <plugin>
         <groupId>dev.sigstore</groupId>
         <artifactId>sigstore-maven-plugin</artifactId>
-        <version>1.3.0</version>
+        <version>2.0.0</version>
         <executions>
           <execution>
             <id>sigstore-sign</id>
