Provide URL to how to acquire a ROR ID

--- a/datamanager-app/src/main/resources/application.properties
+++ b/datamanager-app/src/main/resources/application.properties
@@ -138,6 +138,7 @@ qbic.external-service.person-search.orcid.scope=/read-public
 qbic.external-service.person-search.orcid.grant-type=client_credentials
 qbic.external-service.person-search.orcid.issuer=${ORCID_SEARCH_ISSUER_URL:https://orcid.org}
 qbic.external-service.organisation-search.ror.organisation-api-endpoint=${ROR_ORGANISATION_ENDPOINT:https://api.ror.org/v2/organizations/}
+# Client ID needs to be requested, check out: https://ror.readme.io/docs/client-id
 qbic.external-service.organisation-search.ror.client-id=${ROR_CLIENT_ID}
 
 ###############################################################################
