--- a/datamanager-app/src/main/resources/application.properties
+++ b/datamanager-app/src/main/resources/application.properties
@@ -46,7 +46,14 @@ logging.level.com.zaxxer.hikari=INFO
 spring.jpa.database=mysql
 # Can be enabled for debugging purposes, not recommended in production
 spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=false
+logging.level.org.hibernate.orm.jdbc.bind=error
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.orm.jdbc.bind=trace
+
 # In case you want to access the H2 database (if you use one)
 spring.h2.console.enabled=false
 # Set explicitly to false to close a session on request finish
